# csv2notion-neo

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .versionrc.js  AGENT.MD  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MIGRATION_GUIDE.md  README.md  SECURITY.md  csv2notion.spec  csv2notion_neo.spec  docker-bake.hcl  fake_log.sh  install_from_docker.sh  log.txt  pyproject.toml  setup.cfg  test_log.txt  upload-marker-sfx.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_template.yml  config.yml
.github/workflows/: build.yml  code_sign_csv2notion_neo.yml  codeql.yml  notion_delete_database_entries_test.yml  notion_image_upload_test.yml  release_github.yml  release_github_uni.yml  release_pypi.yml  test.yml  unit_tests.yml
archive/: README.md  archive_tests.py
csv2notion/: notion_row_upload_file.py
csv2notion_neo/: __init__.py  __main__.py  cli.py  cli_args.py  cli_steps.py  csv_data.py  local_data.py  notion_client.py  notion_client_official.py  notion_convert.py  notion_convert_map.py  notion_db.py  notion_db_client.py  notion_db_client_official.py  notion_db_collection.py  notion_db_official.py  notion_preparator.py  notion_row.py  notion_row_image_block.py  notion_row_upload_file.py  notion_row_upload_file_official.py  notion_type_guess.py  notion_uploader.py  utils_ai.py  utils_db.py  utils_exceptions.py  utils_file.py  utils_rand_id.py  utils_static.py  utils_str.py  utils_threading.py
csv2notion_neo/notion/: block.py  client.py  collection.py  logger.py  maps.py  markdown.py  monitor.py  operations.py  records.py  settings.py  store.py  user.py  utils_ssl.py
docker/: Dockerfile  README.md  docker-bake.hcl  install_from_docker.sh
scripts/: README.md  docker-run.sh  local-test-build.sh
test/Notion Upload Test/: Notion Upload Test.json
test/json/: notion-upload-test.json
tests/: README.md  __init__.py  input_command.py  test_all.py  test_basic.py  test_comprehensive.py  test_delete_database_entries.py  test_guess_type.py  test_log.txt  test_notion_db_cache.py  test_notion_row.py  test_ops.py  test_ops_column_types.py  test_ops_column_types_file.py  test_ops_column_types_person.py  test_ops_column_types_status.py  test_ops_default_icon.py  test_ops_fail_on_conversion_error.py  test_ops_fail_on_duplicate_csv_columns.py  test_ops_fail_on_duplicates.py  test_ops_fail_on_inaccessible_relations.py  test_ops_fail_on_relation_duplicates.py  test_ops_fail_on_unsettable_columns.py  test_ops_icon_column.py  test_ops_image_caption_column.py  test_ops_image_column.py  test_ops_mandatory_column.py  test_ops_merge.py  test_ops_merge_column_types_file.py  test_ops_merge_icon_column.py  test_ops_merge_image_column.py  test_ops_missing_columns_action.py  test_ops_relations.py  test_upload.py  upload-markers-delete-database-entries.sh  upload-markers_json-rename-key.sh
tests/fixtures/: db_maker.py  db_maker_class.py  db_maker_notion_db.py
