[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "csv2notion_neo"
version = "2.2.0"
description = "Upload & Merge CSV or JSON Data with Images to Notion Database"
authors = ["Arjun <arjunprakash027@gmail.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]
license = "MIT"
homepage = "https://github.com/TheAcharya/csv2notion-neo"
repository = "https://github.com/TheAcharya/csv2notion-neo"
documentation = "https://github.com/TheAcharya/csv2notion-neo/blob/master/README.md"
keywords = ["csv", "json", "notion", "import", "merge"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/TheAcharya/csv2notion-neo/blob/master/CHANGELOG.md"

[tool.poetry.scripts]
csv2notion_neo = "csv2notion_neo.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
python-dateutil = "^2.9.0.post0"
tqdm = "^4.67.1"
emoji = "^2.14.1"
requests = "^2.32.4"
icecream = "^2.1.5"
notion-client = "^3.1.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"
types-requests = "^2.33.0.20260518"
types-python-dateutil = "^2.9.0.20260518"
types-emoji = "^2.1.0.3"
mdformat = "^1.0.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.14.1"
pyfakefs = "^6.0.0"
black = "^26.0.0"
isort = "^8.0.0"
pre-commit = "^4.0.0"
wemake-python-styleguide = "^1.6.0"
flake8 = "^7.3.0"
mypy = "^2.0.0"

# Lint: see setup.cfg (flake8 + wemake-python-styleguide; flakehell removed — incompatible with flake8 7+)

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.coverage]
    [tool.coverage.report]
    show_missing = true
    exclude_lines = [
        # Have to re-enable the standard pragma
        'pragma: no cover',

        # Don't complain about missing debug-only code:
        'def __repr__',
        'if self\.debug',

        # Don't complain if tests don't hit defensive assertion code:
        'raise AssertionError',
        'raise NotImplementedError',

        # Don't complain if non-runnable code isn't run:
        'if 0:',
        'if __name__ == .__main__.:'
    ]
    omit = [
        '*/tests/*',
    ]

[tool.mypy]
files = "csv2notion_neo"

disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
#disallow_any_explicit = true
disallow_any_generics = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

check_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_equality = true
no_implicit_optional = true
